--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://cortezd334.github.io/website",
+  "homepage": "http://daniracortez.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +10,7 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
